--- a/env/template.env
+++ b/env/template.env
@@ -1,6 +1,9 @@
 ##################################################################################
 # To get autocompletion add new variables to the ProcessEnv interface in src/modules.
-# Do not use quotes (NAME='Wl') - Do this instead NAME=Wil
+# Do not use quotes (NAME='Wl') because docker fails - Do this instead NAME=Wil 
 ##################################################################################
 
+NODE_ENV=development
 PORT=3000
+PAYPAL_ID=
+PAYPAL_SECRET=
