--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -19,7 +19,7 @@ spec:
         image: payment-ms:1.0.0
         envFrom:
           - configMapRef:
-              name: env-vars
+              name: payment-config
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 3000
